2006-02-15  Vlad Seryakov  <seryakov@users.sf.net>

	src/driver.c:
	src/nsd.h: Added maxqueuesize parameter to limit incoming 
	sockets queue size to prevent possible DoS attacks, 
	default size set to 256. 
	include/ns.h: Made struct sockaddr_in sa public in
	Ns_Sock and Sock in private nsd.h to have access to it
	from communication modules without using private nsd.h 

2006-02-13  Ibrahim Tannir  <itannir@users.sf.net>
	* nsd/nswin32.c: fixed assigning the stdin, stdout, stderr channels
	  in order for Tcl to attach them properly when a new thread/interp
	  is created.
	
2006-02-08  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* configure.in:
	* m4/tcl.m4: added TEA 3.5. Scrapped testing for 
	MACOSX_DEPLOYMENT_TARGET.
	* nsd/cache.c: Implemented RFE #1427620
	* tests/test.nscfg: Set cachetimeout to 360 secs
	* tests/ns_cache.test: Reduced number of threads
	testing cache stability from 100 to 16 as it was
	blowing up smaller machines
	* doc/src/man.macros: new file
	* doc/src/README.doc: clarify that "man -l" will
	only work on Linux when using gzipped manpages.

2006-02-08  Bernd Eidenschink  <eide@users.sourceforge.net>

	* nsdb/util.tcl:
	* nsperm/init.tcl:
	* tcl/stats.tcl:
	* tcl/file.tcl:
	* tcl/cache.tcl:
	* tcl/util.tcl: 
	* tcl/ttrace.tcl: "legacy" files, contd.

2006-02-07  Bernd Eidenschink  <eide@users.sourceforge.net>

	* tcl/form.tcl:
	* tcl/http.tcl:
	* tcl/charsets.tcl:
	* tcl/fastpath.tcl:
	* tcl/sendmail.tcl: fixed non-braced expressions and standardized
	comparisons with TCL string operators. Thanks to Gustaf Neumann
	for providing the fixes! There are still some legacy files left.

2006-02-07  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsthread/nsthreadtest.c: Includes "config.h" to get 
	STATIC_BUILD defined.

	* tcl/ttrace.tcl: Removed compat code for Tcl threading extension.
	Arranged to be loaded only once per virtual server.
	Changed license to Mozilla.

	* sample-config.tcl.in: